--- a/foundations/flex/07-flex-layout-2/index.html
+++ b/foundations/flex/07-flex-layout-2/index.html
@@ -33,7 +33,7 @@
     </div>
     
     <div class="footer">
-      The Odin Project ❤️
+      <span>The Odin Project ❤️</span>
     </div>
   </body>
 </html>
